# aquabill-app

./: .env.example  .gitignore  AUDIT_LOGGING_GUIDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml.example  requirements.txt
app/: main.py
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9e18e2e7c778_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  auth.py
backend/app/core/: config.py  constants.py  db.py  exceptions.py  security.py
backend/app/integrations/sms/: textbee.py
backend/app/models/: __init__.py  alert.py  assignment.py  audit_log.py  client.py  cycle.py  ledger.py  meter.py  payment.py  penalty.py  reading.py  sms.py  sync_conflict.py  user.py
backend/app/services/: sms_service.py
backend/app/utils/: precision.py
backend/scripts/: create_demo_users.py
deployment/: nginx.conf
docs/: API_REFERENCE.md  AUDIT_LOGGING_GUIDE.md  AUTHENTICATION_IMPLEMENTATION.md  BACKEND_IMPLEMENTATION.md  DEPLOYMENT.md  DEVELOPMENT.md  HOLIDAY_CONFIG.md  MOBILE_FRONTEND_IMPLEMENTATION.md  PHASE5_BACKEND_SUMMARY.md  PHASE5_MOBILE_DESIGN.md  QUICK_START_AUTH.md  TODOs.md  api-contract.md  database-schema.md  guideline.md
migrations/: README.md  env.py
mobile/: .flutter-plugins-dependencies  README.md  pubspec.yaml
monitoring/: prometheus.yml
scripts/: reset_dev_db.sh  seed_demo_data.py
tests/: test_client_meter_baseline_flow.py  test_health.py  (+3 more)
(+190 files in other folders)
