[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aquabill-app"
version = "0.1.0"
description = "Offline-first water billing backend (prototype)"
authors = [{ name = "AquaBill" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.12",
    "python-dotenv>=1.0",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]
