[tool.poetry]
name = "aquabill"
version = "0.1.0"
description = "Water meter reading and billing management system"
authors = ["AquaBill Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.0"
celery = "^5.3.0"
redis = "^5.0.0"
requests = "^2.31.0"
python-multipart = "^0.0.6"
python-dateutil = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.9.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
